--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Swiggy</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="./App.js"></script>
+    <script src="App.js"></script>
 </body>
 </html>
